# ocr-vedic

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  schemas.py  storage_uploads.py  vllm_runtime.py
backend/app/cost/: __init__.py  gemini_ledger.py  gemini_pricing.py
backend/app/providers/: __init__.py  base.py  bedrock_claude.py  bedrock_open.py  gemini.py  prompts.py  vllm_dots.py  vllm_gemma.py
backend/app/services/: ocr_service.py
backend/app/utils/: __init__.py  dots_ocr.py  image_preprocess.py  model_id.py  output_format.py  pdf.py  vllm_prompt.py
backend/tests/: test_gemini_cost.py  test_health.py  test_model_id_resolve.py  test_output_format.py  test_upload_storage.py
deploy/: Dockerfile.frontend  Dockerfile.vllm-dots  nginx.conf  ocr-vedic.service  setup-host.sh  vllm-entrypoint.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  apiBase.ts  index.css
