[project]
name = "vedic-ocr-backend"
version = "0.1.0"
description = "FastAPI OCR service for Vedic scriptures (Gemini + AWS Bedrock)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1",
  "uvicorn[standard]>=0.32.0,<1",
  "python-multipart>=0.0.12,<1",
  "pydantic>=2.9.0,<3",
  "pydantic-settings>=2.6.0,<3",
  "google-genai>=1.0.0,<2",
  "boto3>=1.35.0,<2",
  "PyMuPDF>=1.24.0,<2",
  "Pillow>=10.0.0,<12",
  "httpx>=0.27.0,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
